<resources>
    <string name="app_name">senior_proj</string>
    <string name="But_CreateAccount">Sign Up</string>
    <string name="TV_Login">"Health &amp; Fitness App "</string>
    <string name="eT_email">Email</string>
    <string name="et_password">Password</string>
    <string name="BT_login">Log In</string>
    <string name="TV_signintext">Do not have an account?</string>
    <string name="title_activity_main_page">mainPage</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="IV_login_desc">Lady Running Fitness</string>
    <string name="IV_signup_desc">Cherry Blossom Park Outdoors</string>
    <string name="et_signup_name"> Name</string>
    <string name="BT_verify_email"> Authenticate Email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="descr_overflow_button">overflow button</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_health">Health</string>
    <string name="title_fitness">Fitness</string>
    <string name="TV_signupdesc">Enter your sign up Information here:</string>
    <string name="TV_loginDesc">Enter Login Information Here:</string>
    <string name="title_empty">Empty Title</string>
    <string name="waterProgress">waterProgress</string>
    <string name="addWater">add water</string>
    <string name="addCup">Add a Cup</string>
    <string name="addCustom">Add a Custom Amount</string>
    <string name="tab_a_label">Weekly</string>
    <string name="tab_b_label">Monthly</string>
    <string name="title_water">Water</string>
    <string name="preference_file_key">prefkey</string>
    <string name="list_desc">Menu Dialog List Checking Image</string>
    <string name="menuweightlabel">Weight (lb)</string>
    <string name="menuwaterlabel">Water Goal (ml)</string>
    <string name="menuheightlabel">Height (in)</string>
    <string name="welcomeMenuDialogText">Welcome, enter your height, weight, sex, activity level,
        and water goal. The first four factors are part of the Mifflin - St Jeor equation to calculate
        your daily recommended calorie intake. Your water goal will be used to set your daily
        water intake goal. These values can be updated in the settings at any time.</string>
    <string name="welcomeTitleMenuDialog">Welcome!</string>
    <string name="BTsaveMenuDialog">SAVE</string>
    <string name="requiredErrorText">*required</string>
    <string name="user_ID">userID</string>
    <string name="welcomeImageText">welcome Background Image</string>
    <string name="MCVfitnessTitle">Fitness</string>
    <string name="MCVfitnessSupportingText">Visit the Fitness section to view your daily steps, use a stopwatch, or to view and record workouts.</string>
    <string name="healthImageText">health intro image</string>
    <string name="MCVwaterTitle">Hydration</string>
    <string name="MCVwaterSupportingText">Visit the Water section to manage daily water drinking habits. The graphs in this section will also show your weekly and monthly water consumption.</string>
    <string name="MCVhealthTitle">Nutrition</string>
    <string name="MCVhealthSupportingText">Visit the health section to log your meals. By logging your meals, you will be able to keep track of the amount of calories, fats, carbs, and protein you have consumed daily.</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="TILFoodSearchHint">Search Food Item Here</string>
    <string name="TVfats">Fats</string>
    <string name="TVprotein">Protein</string>
    <string name="TVcarbs">Carbs</string>
    <string name="TVcalories">Calories</string>
    <string name="extended_fab_content_desc">floating action button add workout</string>
    <string name="extended_fab_label">ADD WORKOUT</string>
    <string name="credits">Credits</string>
    <string name="settings">Settings</string>
    <string name="TVsettingsdescription">Update any of the previously entered information here</string>

    <string-array name="sex">
        <item>Female</item>
        <item>Male</item>
    </string-array>
</resources>


