<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/mobile_navigation"
app:startDestination="@+id/navigation_home"
    tools:ignore="UnusedNavigation">

<fragment
    android:id="@+id/navigation_water"
    android:name="com.example.senior_proj.ui.water.WaterFragment"
    android:label="@string/title_health"
    tools:layout="@layout/fragment_water"/>

<fragment
    android:id="@+id/navigation_home"
    android:name="com.example.senior_proj.ui.home.HomeFragment"
    android:label="@string/title_home"
    tools:layout="@layout/fragment_home" />

<fragment
    android:id="@+id/navigation_fitness"
    android:name="com.example.senior_proj.ui.fitness.FitnessFragment"
    android:label="@string/title_fitness"
    tools:layout="@layout/fragment_fitness" />

<fragment
    android:id="@+id/navigation_health"
    android:name="com.example.senior_proj.ui.nutrition.NutritionFragment"
    android:label="@string/title_health"
    tools:layout="@layout/fragment_nutrition" />
</navigation>
