<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavenderPink"
    tools:context=".signUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/IV_signup_desc"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cherry_park_svg" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="98dp"
            android:autofillHints=""
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:ems="10"
            android:fontFamily="@font/jost"
            android:hint="@string/et_signup_name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/eastBay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/et_su_email"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="98dp"
            android:autofillHints=""
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:ems="10"
            android:fontFamily="@font/jost"
            android:hint="@string/eT_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/eastBay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_su_pass"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="216dp"
            android:autofillHints=""
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:fontFamily="@font/jost"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/eastBay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_su_email" />

        <Button
            android:id="@+id/BT_signup"
            android:layout_width="117dp"
            android:layout_height="59dp"
            android:layout_marginStart="164dp"
            android:layout_marginEnd="163dp"
            android:layout_marginBottom="31dp"
            android:backgroundTint="@color/eastBay"
            android:elevation="16dp"
            android:fontFamily="@font/jost"
            android:onClick="signUpIClick"
            android:text="@string/But_CreateAccount"
            android:textColor="@color/lavenderPink"
            app:layout_constraintBottom_toTopOf="@+id/BT_verify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/BT_verify"
            android:layout_width="205dp"
            android:layout_height="48dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/eastBay"
            android:elevation="16dp"
            android:fontFamily="@font/jost"
            android:onClick="verifyEmail"
            android:text="@string/BT_verify_email"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="174dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="178dp"
            android:fontFamily="@font/jost"
            android:text="@string/TV_signupdesc"
            android:textColor="@color/eastBay"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>