<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/cb"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp"
            android:layout_marginBottom="377dp"
            android:autofillHints=""
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:ems="10"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="213dp"
            android:layout_height="48dp"
            android:layout_marginStart="102dp"
            android:layout_marginLeft="102dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="96dp"
            android:layout_marginRight="96dp"
            android:autofillHints=""
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:ems="10"
            android:hint="@string/eT_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="136dp"
            android:layout_height="19dp"
            android:layout_marginStart="137dp"
            android:layout_marginLeft="137dp"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="138dp"
            android:layout_marginRight="138dp"
            android:text="@string/TV_Login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="161dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:layout_marginBottom="156dp"
            android:text="@string/But_CreateAccount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginStart="163dp"
            android:layout_marginLeft="163dp"
            android:layout_marginEnd="160dp"
            android:layout_marginRight="160dp"
            android:layout_marginBottom="277dp"
            android:text="@string/BT_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="234dp"
            android:layout_height="19dp"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginEnd="79dp"
            android:layout_marginRight="79dp"
            android:layout_marginBottom="230dp"
            android:text="@string/TV_signintext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>