<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pictonBlue"
    tools:context=".LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="211dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/IV_login_desc"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/undraw_fitness_tracker_3033" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="327dp"
                android:layout_height="35dp"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/jost"
                android:gravity="center"
                android:text="@string/TV_signintext"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/honeysuckle"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btSignUp"
                android:layout_width="121dp"
                android:layout_height="66dp"
                android:layout_marginStart="160dp"
                android:layout_marginEnd="155dp"
                android:layout_marginBottom="129dp"
                android:backgroundTint="@color/honeysuckle"
                android:elevation="16dp"
                android:fontFamily="@font/jost"
                android:onClick="signUpClick"
                android:text="@string/But_CreateAccount"
                android:textColor="@color/pictonBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btLogin"
                android:layout_width="125dp"
                android:layout_height="64dp"
                android:layout_marginStart="160dp"
                android:layout_marginEnd="155dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/honeysuckle"
                android:elevation="16dp"
                android:fontFamily="@font/jost"
                android:onClick="logInClick"
                android:text="@string/BT_login"
                android:textColor="@color/pictonBlue"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <EditText
                    android:id="@+id/passText"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="79dp"
                    android:layout_marginEnd="82dp"
                    android:layout_marginBottom="344dp"
                    android:autofillHints=""
                    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                    android:ems="10"
                    android:fontFamily="@font/jost"
                    android:hint="@string/et_password"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="79dp"
                    android:layout_marginEnd="82dp"
                    android:layout_marginBottom="22dp"
                    android:autofillHints=""
                    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                    android:ems="10"
                    android:fontFamily="@font/jost"
                    android:hint="@string/eT_email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toTopOf="@+id/passText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="170dp"
                    android:layout_marginTop="232dp"
                    android:layout_marginEnd="182dp"
                    android:fontFamily="@font/jost"
                    android:text="@string/TV_loginDesc"
                    android:textAlignment="center"
                    android:textColor="@color/honeysuckle"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.443"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>