<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="72dp"
    android:paddingTop="?android:attr/actionBarSize"
    android:background="@color/mintTulip"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    tools:context=".ui.water.WaterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/waterProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Water Progress Bar -->

                    <TextView
                        android:id="@+id/textPercentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/jost"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/textRemaining"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textPercentage"
                        android:layout_centerInParent="false"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="70dp"
                        android:fontFamily="@font/jost"
                        android:maxWidth="200dp"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                        android:id="@+id/circularProgressBar"
                        android:layout_width="195dp"
                        android:layout_height="205dp"
                        android:layout_centerInParent="true"
                        app:cpb_background_progressbar_color="#b6bbd8"
                        app:cpb_background_progressbar_width="15dp"
                        app:cpb_progress_direction="to_right"
                        app:cpb_progressbar_color_start="#B0EDF5"
                        app:cpb_progressbar_color_end="#5B36DE"
                        app:cpb_progressbar_color_direction="bottom_to_top"
                        app:cpb_progressbar_width="20dp"
                        app:cpb_round_border="true" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

                <!-- Buttons -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cupBtn"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/jost"
                        android:text="@string/addCup" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/customBtn"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/jost"
                        android:text="@string/addCustom" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/WaterChart"
                android:layout_width="match_parent"
                android:layout_height="296dp"
                android:layout_margin="8dp">

                <!-- Tabs & Water Graph -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabs"
                        style="@style/AppTheme.TabLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tab1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_a_label" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tab2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_b_label" />

                    </com.google.android.material.tabs.TabLayout>


                    <com.example.senior_proj.AAChartCore.AAChartCoreLib.AAChartCreator.AAChartView
                        android:id="@+id/AAChartView"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="-29dp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>